--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "parcel --no-cache static/index.html",
     "start": "npm run build && node ./server.js",
-    "build": "parcel build static/index.html"
+    "build": "npm install && parcel build static/index.html"
   },
   "repository": {
     "type": "git",
